# Detecting_PCB_Object_by_YOLO

./: $null  .env  .gitignore  .pcb_ui_state.json  train-yolo11-object-detection-on-custom-dataset.ipynb
.github/workflows/: ci.yml
notebooks/: train-yolo11-object-detection-on-custom-dataset.ipynb
pcb_yolo/: .env.example  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pcb_yolo/configs/: data_config.yaml  deploy_config.yaml  mock_data.yaml  model_config.yaml  test_train_config.yaml  train_config.yaml
pcb_yolo/data/mock/train/: labels.cache
pcb_yolo/data/mock/val/: labels.cache
pcb_yolo/docs/: experiment_protocol.md
pcb_yolo/experiments/test_predictions/: detections.json
pcb_yolo/experiments/test_train/: args.yaml  results.csv
pcb_yolo/scripts/: deploy.py  prepare_dataset.py  train.py
pcb_yolo/src/: export.py  train.py
pcb_yolo/src/datasets/: augmentations.py  factory.py  loader.py
pcb_yolo/src/inference/: detector.py
pcb_yolo/src/models/: factory.py  trainer.py  yolo_model.py
pcb_yolo/src/pipeline/: deploy_pipeline.py  train_pipeline.py
pcb_yolo/src/utils/: helpers.py  logger.py  metrics.py
pcb_yolo/tests/: test_integration.py  test_metrics.py  test_regression.py
src/: __init__.py
ui/: __init__.py  pcb_ui.py
